--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="de" class="js">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
