feat: Add analytics script
The script tag at the bottom of the page is always the same. The script tag in the header
uses a different url depending on environment. This can be set at deployment time.

--- a/src/app.html
+++ b/src/app.html
@@ -10,5 +10,6 @@
 
 	<body>
 		<div id="svelte">%svelte.body%</div>
+		<script type="text/javascript">_satellite.pageBottom();</script>
 	</body>
 </html>
