--- a/src/app.html
+++ b/src/app.html
@@ -2,13 +2,12 @@
 <html lang="de">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+		<meta name="viewport" content="width=device-width" />
 		<title>Open Data Zürich - Stadt Zürich</title>
-		<link rel="shortcut icon" href="/favicon.ico" />
-		%svelte.head%
+		%sveltekit.head%
 	</head>
-
 	<body>
-		<div id="svelte">%svelte.body%</div>
+		<div>%sveltekit.body%</div>
 	</body>
 </html>
